Added Show Password function

--- a/app/src/main/res/layout/signup_screen.xml
+++ b/app/src/main/res/layout/signup_screen.xml
@@ -60,23 +60,30 @@
                 android:orientation="horizontal"
                 android:gravity="center_vertical">
 
-                <EditText
-                    android:id="@+id/et_signup_passwd"
-                    android:layout_width="wrap_content"
-                    android:scrollHorizontally="true"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/normal"
-                    android:hint="Password"
-                    android:inputType="textPassword"
-                    android:background="@color/empty"
-                    android:paddingLeft="@dimen/side_padding"
-                    android:paddingRight="@dimen/side_padding"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:layout_alignParentLeft="true"/>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical"
+                    android:layout_weight="10">
+
+                    <EditText
+                        android:id="@+id/et_signup_passwd"
+                        android:layout_width="wrap_content"
+                        android:scrollHorizontally="true"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/normal"
+                        android:hint="Password"
+                        android:inputType="textPassword"
+                        android:background="@color/empty"
+                        android:paddingLeft="@dimen/side_padding"
+                        android:paddingRight="10dp"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"/>
+
+                </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:orientation="vertical"
                     android:gravity="center_vertical">
@@ -85,8 +92,7 @@
                         android:id="@+id/checkbox_showPass"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="20dp"
-                        android:layout_gravity="right"
+                        android:layout_marginRight="@dimen/side_padding"
                         android:button="@drawable/eye_checkbox"/>
 
                 </LinearLayout>
