--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="empty">#00ffffff</color>
     <color name="light_gray">#ff8c8c8c</color>
     <color name="red">#ff0000</color>
+    <color name="theme">#ffff334e</color>
 </resources>
