--- a/app/src/main/res/layout/signup_screen.xml
+++ b/app/src/main/res/layout/signup_screen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
     <ImageView
         android:layout_width="match_parent"
@@ -106,6 +107,19 @@
                 android:paddingBottom="10dp"/>
 
         </LinearLayout>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/iv_userImage"
+            app:border_color="#FF000000"
+            app:border_width="1dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="@dimen/margin_medium"
+            android:padding="@dimen/padding_medium"
+            android:layout_margin="@dimen/margin_large"
+            android:src="@drawable/default_user" />
 
         <Button
             android:id="@+id/btn_signup"
