--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -9,7 +9,7 @@
     app:contentInsetStart="0dp"
     >
 
-    <RelativeLayout
+    <!--<RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:background="@color/red">
@@ -26,5 +26,5 @@
             android:textColor="@color/white"
             android:textStyle="bold" />
 
-    </RelativeLayout>
+    </RelativeLayout>-->
 </android.support.v7.widget.Toolbar>
