--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,9 @@
     <dimen name="padding_medium">8dp</dimen>
     <dimen name="padding_large">12dp</dimen>
 
+    <dimen name="text_size_vsmall">9sp</dimen>
+    <dimen name="text_size_small">12sp</dimen>
+    <dimen name="text_size_medium">15sp</dimen>
+    <dimen name="text_size_large">20sp</dimen>
+    <dimen name="text_size_vlarge">25sp</dimen>
 </resources>
